# sql-prompt-copilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  test_pitfalls.mjs  test_ql.mjs  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/db/: commands.rs  mod.rs  schema.rs
src/components/: CorrectionDialog.tsx  DAGVisualization.tsx  DatabasePanel.tsx  HistoryPanel.tsx  ResultPanel.tsx  SearchInput.tsx  SendToFeishuDialog.tsx  SettingsPanel.tsx  Toast.tsx
src/data/: config.ts  providers.ts  schema.json
src/hooks/: useAI.ts  useDatabase.ts  useTauri.ts
src/lib/: aiService.ts  correctionKB.ts  credentialService.ts  historyService.ts  promptBuilder.ts  schemaRAG.ts  sqlParser.ts  sqlValidator.ts
src/lib/__tests__/: promptBuilder.test.ts  schemaRAG.test.ts  sqlParser.test.ts  sqlValidator.test.ts
src/types/: index.ts
