[package]
name = "sql-prompt-copilot"
version = "0.1.0"
description = "SQL Prompt Copilot - AI-powered SQL prompt generator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "mysql", "postgres", "sqlite"] }
keyring = { version = "3", features = ["sync-secret-service", "linux-secret-service-rt-async-io-crypto-rust"] }
urlencoding = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
